# RmathExtended

./: CMakeLists.txt  readme.txt  setup_r_source.sh
include/: RmathExtended.h
inst/: Rconfig.h
mvtnorm-source/: mvtdstpack.f  mvtnorm.h
r-source/src/include/: Rmath.h
test/: test_mvtdst.cpp  test_pnorm.cpp  test_zeroin.cpp
